[gd_scene load_steps=2 format=3 uid="uid://ddm72evk1kvd4"]

[ext_resource type="Script" uid="uid://b7ueblu5gpc7s" path="res://the_menu/game_initialization_uis/play_area_init_ui.gd" id="1_wkbw6"]

[node name="PlayAreaInitUI" type="BoxContainer"]
size_flags_horizontal = 4
alignment = 1
vertical = true
script = ExtResource("1_wkbw6")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Play Area Size"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAreaSizeList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
auto_width = true
auto_height = true
item_count = 3
max_columns = 3
same_column_width = true
icon_mode = 0
item_0/text = "6 by 4"
item_1/text = "10 by 5"
item_2/text = "20 by 10"

[connection signal="item_selected" from="PlayAreaSizeList" to="." method="_on_play_area_size_list_item_selected"]
